# OS_lab

battleship/: CMakeLists.txt  Dockerfile  client.cpp  server.cpp
battleship/docx/: otchet6.docx  ~$tchet6.docx
docs/: оси.docx
lab04/: CMakeLists.txt  Dockerfile
lab04/docx/: otchet4.docx  ~$tchet4.docs  ~$tchet4.docx
lab04/include/: contracts.h
lab04/src/: derivative1.cpp  e2.cpp  main_linking.cpp  main_runtime.cpp
lab1/src/: child  parent
lab2/: CMakefile   Dockerfile  convolution.c  convolution.h  dlab2.docx  main.c  matrix_utils.c  matrix_utils.h  performance.c  performance.h  thread_utils.c  thread_utils.h  ~$dlab2.docx
lab2/docs/: dlab02.docx
lab3/: Dockerfile  child.c  parent.c
lab3/docs/: otchet3.docx
lab4/: Dockerfile  Makefile  program1  program1_linux  program2  program2_linux  ~$tchet4.dotx
lab4/docs/: otchet4.docs
lab4/libs/: libcalc1.dylib  libcalc2.dylib
lab4/src/: derivative2.cpp  e1.cpp  main_linking.cpp  main_runtime.cpp
lab5/: ~$tchet5.docx
src/: Dockerfile  Makefile  child.c  docker-compose.yml  out1.txt  parent.c
